--- a/Fichiers/css/style.css
+++ b/Fichiers/css/style.css
@@ -3,7 +3,7 @@
 :root {
 	--dark-color-a: #667aff;
 	--dark-color-b: #7386ff;
-	--light-color: #e6e9ff;
+	--light-color: #c2cbee;
 	--success-color: #5cb85c;
 	--error-color: #d9534f;
 }
@@ -21,13 +21,6 @@ body {
 	margin: 20px;
 }
 
-ul {
-	list-style: none;
-}
-
-a {
-	text-decoration: none;
-}
 
 .btn {
 	cursor: pointer;
@@ -38,95 +31,6 @@ a {
 	font-size: 17px;
 }
 
-/* Chat Page */
-
-.chat-container {
-	max-width: 1100px;
-	background: #fff;
-	margin: 30px auto;
-	overflow: hidden;
-}
-
-.chat-header {
-	background: var(--dark-color-a);
-	color: #fff;
-	border-top-left-radius: 5px;
-	border-top-right-radius: 5px;
-	padding: 15px;
-	display: flex;
-	align-items: center;
-	justify-content: space-between;
-}
-
-.chat-main {
-	display: grid;
-	grid-template-columns: 1fr 3fr;
-}
-
-.chat-sidebar {
-	background: var(--dark-color-b);
-	color: #fff;
-	padding: 20px 20px 60px;
-	overflow-y: scroll;
-}
-
-.chat-sidebar h2 {
-	font-size: 20px;
-	background: rgba(0, 0, 0, 0.1);
-	padding: 10px;
-	margin-bottom: 20px;
-}
-
-.chat-sidebar h3 {
-	margin-bottom: 15px;
-}
-
-.chat-sidebar ul li {
-	padding: 10px 0;
-}
-
-.chat-messages {
-	padding: 30px;
-	max-height: 500px;
-	overflow-y: scroll;
-}
-
-.chat-messages .message {
-	padding: 10px;
-	margin-bottom: 15px;
-	background-color: var(--light-color);
-	border-radius: 5px;
-}
-
-.chat-messages .message .meta {
-	font-size: 15px;
-	font-weight: bold;
-	color: var(--dark-color-b);
-	opacity: 0.7;
-	margin-bottom: 7px;
-}
-
-.chat-messages .message .meta span {
-	color: #777;
-}
-
-.chat-form-container {
-	padding: 20px 30px;
-	background-color: var(--dark-color-a);
-}
-
-.chat-form-container form {
-	display: flex;
-}
-
-.chat-form-container input[type='text'] {
-	font-size: 16px;
-	padding: 5px;
-	height: 40px;
-	flex: 1;
-}
-
-/* Join Page */
 .join-container {
 	max-width: 500px;
 	margin: 80px auto;
@@ -134,56 +38,70 @@ a {
 }
 
 .join-header {
+	text-shadow: 2px 2px 1px gray;
 	text-align: center;
 	padding: 20px;
-	background: var(--dark-color-a);
 	border-top-left-radius: 5px;
 	border-top-right-radius: 5px;
-}
+	background-image: -moz-linear-gradient(25deg, cyan 0%, dimgray 50%, silver 100%);
+	background-image: -o-linear-gradient(25deg, cyan 0%, dimgray 50%, silver 100%);
+	background-image: -ms-linear-gradient(25deg, cyan 0%, dimgray 50%, silver 100%);
+	background-image: -webkit-linear-gradient(25deg, cyan 0%, dimgray 50%, silver 100%);
 
-.join-main {
-	padding: 30px 40px;
-	background: var(--dark-color-b);
 }
+/* ------------ CSS POUR LE TABLEAU DE LA BASE DE DONNEES --------------- */
 
-.join-main p {
-	margin-bottom: 20px;
-}
+table {
 
-.join-main .form-control {
-	margin-bottom: 20px;
-}
-
-.join-main label {
-	display: block;
-	margin-bottom: 5px;
-}
-
-.join-main input[type='text'] {
-	font-size: 16px;
-	padding: 5px;
-	height: 40px;
+	border: 3px solid darkcyan;
+	border-collapse: collapse;
 	width: 100%;
+	margin: auto;
 }
 
-.join-main select {
-	font-size: 16px;
-	padding: 5px;
-	height: 40px;
+tbody {
+	/*background-color: Thistle;*/
+	border: 1px solid #6495ed;
+}
+
+th, td {
+	padding: 10px;
+	text-align: left;
+	
+}
+
+
+.pied {
 	width: 100%;
+	height: 60px;
+	
+	background-image: -moz-linear-gradient(25deg, cyan 0%, dimgray 50%, silver 100%);
+	background-image: -o-linear-gradient(25deg, cyan 0%, dimgray 50%, silver 100%);
+	background-image: -ms-linear-gradient(25deg, cyan 0%, dimgray 50%, silver 100%);
+	background-image: -webkit-linear-gradient(25deg, cyan 0%, dimgray 50%, silver 100%);
 }
 
-.join-main .btn {
-	margin-top: 20px;
-	width: 100%;
+
+textarea {
+	width: 50%;
+	padding: 12px;
+	border: 1px solid #ccc;
+	border-radius: 4px;
+	margin-top: 6px;
+	margin-bottom: 16px;
+	resize: vertical;
 }
 
-@media (max-width: 700px) {
-	.chat-main {
-		display: block;
-	}
 
-	.chat-sidebar {
-		display: none;
-	}
+
+a:visited {
+
+	color: blanchedalmond;
+}
+a:focus {
+	color: black;
+}
+
+a:hover {
+	color: navy;
 }
